        - Improved detection of system breakpoints by resolving ntdll!DbgBreakPoint.
        - Added logic for compatability with DebugBreakProcess() API.
        - Bug fix in context dump (EBP was being resolved as ESI).
        - Added MSR read/write support: read_msr(), write_msr().
        - Added optional 'hex_dump' flag to smart_dereference to return hex dump in place of undetected strings.


09.13.2006 [REV 122]
    docs:
        - Fixed bug in PyDbg snippet example.
        - Added basic documentation for public-release FileFuzz GUI module.
    pida:
        - Fixed bugs in rendering of GML graphs.
    gui.filefuzz:
        - Added multi-byte modifications feature.
        - Fixed bug in statistic tracking.
    heap_trace:
        - Added tool for heap alloc/free tracking, useful for finding heap spray / memory leak vectors.
    pida:
        - wx is not longer a mandatory requirement for using the PIDA module.
    gui.pstalker:
        - Implemented CLI option to "watch for" and attach to a target process.
    pydbg:
        - Fixed handle leaks in load() routine.
        - Fixed handle leaks in pydbg_core.
        - Implemented hide_debugger() routine to hide from IsDebuggerPresent().
        - Replaced various instances of DBG_CONTINUE with the more approriate DBG_EXCEPTION_NOT_HANDLED, this fix allows
          for improved handling of debugging files with anti-debugging functionality.
        - Fixed bug where breakpoints deleted from their own handler were still being restored.
        - Added page_guard_clear() and page_guard_restore() functionality. This is useful for suspending memory
          breakpoints to single step past a REP instruction.
        - Added optional string 'prefix' argument to hex_dump() for customizing generated dumps.
        - Removed assumption from func_resolve_debuggee() that all DLLs end in ".dll" (ie: QuickTime: .qts/.qtx)
        - Replaced usage of '\\' with os.sep in system_dll.py.