@@ -21,6 +21,10 @@ xx.xx.2006 [REV ]
         - Bug fix in context dump (EBP was being resolved as ESI).
         - Added MSR read/write support: read_msr(), write_msr().
         - Added optional 'hex_dump' flag to smart_dereference to return hex dump in place of undetected strings.
+        - .disasm() routine now returns "[UNKNOWN]" when unable to process instruction.
+        - Added get_register() routine to compliment set_register().
+    pydasm:
+        - Bundled new version of pydasm which manually fixes a memory leak that was affecting PaiMei.
 
 
 09.13.2006 [REV 122]
